--- a/scss/_l-main-nav.scss
+++ b/scss/_l-main-nav.scss
@@ -57,7 +57,7 @@
         flex: 1 1 100%;
         display: flex;
         flex-wrap: wrap;
-        gap: 24px;
+        gap: 15px;
 
         @include mobile {
           gap: 18px;
@@ -82,6 +82,7 @@
 
       &_fullfilled &-link {
         flex: 0 0 30%;
+        height: fit-content;
         font-weight: 400;
         font-size: 16px;
         line-height: 125%;
